--- a/Makefile.in
+++ b/Makefile.in
@@ -7,7 +7,8 @@ install:
 	(cd docs; $(MAKE) install)
 
 release: 
-	(cd src; $(MAKE) clean Version.ml)
+	(cd src; $(MAKE) clean)
+	(cd src; $(MAKE) Version.ml)
 	(cd docs; $(MAKE))
 	./tools/release.sh
 
