--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -16,7 +16,7 @@
 # where to install the binaries
 prefix=@prefix@
 exec_prefix=@exec_prefix@
-BINDIR=@bindir@
+BINDIR=@sbindir@
 
 REQUIRES= unix str
 
