--- a/docs/Makefile.in
+++ b/docs/Makefile.in
@@ -1,22 +1,9 @@
 XSLTPROC= @XSLTPROC@
-DOT = @DOT@
-PS2PDF = @PS2PDF@
 XSLTPROC_FLAGS = @XSLTPROC_FLAGS@
 DOCBOOK_ROOT= @DOCBOOK_ROOT@
 XML_CATALOG= @XML_CATALOG@
 
-all: lvrouted.html lvrouted.pdf
+all: lvrouted.html
 
 lvrouted.html: lvrouted.xml
 	XML_CATALOG_FILES=$(XML_CATALOG) $(XSLTPROC) $(XSLTPROC_FLAGS) xhtml.xsl lvrouted.xml > lvrouted.html || rm lvrouted.html
-
-lvrouted.pdf: lvrouted.ps
-	$(PS2PDF) lvrouted.ps
-
-lvrouted.ps: lvrouted.dot
-	$(DOT) -Gratio=fill -Gnslimit=50.0 -Gmclimit=50.0 -Grotate=90 -Gsize="11,8" -Tps -o lvrouted.ps lvrouted.dot
-
-install:
-
-clean:
-	rm -f lvrouted.html lvrouted.pdf lvrouted.ps
