copy the priority queue in. not used yet.

--- a/node-config/other/lvrouted/branches/pq/src/Makefile.in
+++ b/node-config/other/lvrouted/branches/pq/src/Makefile.in
@@ -50,7 +50,7 @@ all: $(OCAMLBEST) $(NAME).opt
 ######################################
 
 SOURCES = Version.ml LowLevel.ml Common.ml Log.ml Route.ml MAC.ml Tree.ml \
-	Iface.ml Neighbor.ml
+	Iface.ml Neighbor.ml PrioQueue.ml
 CMO = $(SOURCES:.ml=.cmo)
 CMX = $(SOURCES:.ml=.cmx)
 
