plug in the priority queue

--- a/node-config/other/lvrouted/branches/pq/src/Makefile.in
+++ b/node-config/other/lvrouted/branches/pq/src/Makefile.in
@@ -49,8 +49,8 @@ all: $(OCAMLBEST) $(NAME).opt
 # bytecode and native-code compilation
 ######################################
 
-SOURCES = Version.ml LowLevel.ml Common.ml Log.ml Route.ml MAC.ml Tree.ml \
-	Iface.ml Neighbor.ml PrioQueue.ml
+SOURCES = Version.ml LowLevel.ml Common.ml Log.ml Route.ml MAC.ml PrioQueue.ml Tree.ml \
+	Iface.ml Neighbor.ml
 CMO = $(SOURCES:.ml=.cmo)
 CMX = $(SOURCES:.ml=.cmx)
 
