--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -49,7 +49,7 @@ all: $(OCAMLBEST) $(NAME).opt
 # bytecode and native-code compilation
 ######################################
 
-SOURCES = Version.ml LowLevel.ml Common.ml Log.ml Route.ml MAC.ml Tree.ml \
+SOURCES = Version.ml LowLevel.ml Common.ml Log.ml Route.ml MAC.ml PrioQueue.ml Tree.ml \
 	Iface.ml Neighbor.ml
 CMO = $(SOURCES:.ml=.cmo)
 CMX = $(SOURCES:.ml=.cmx)
