--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -59,17 +59,19 @@ GENERATED = Version.ml
 byte: $(NAME).byte
 opt: $(NAME).opt
 
-$(NAME).byte: $(CMO) lowlevel_c.o
+$(NAME).byte: $(CMO) lowlevel_c.o lz4.o
 	$(OCAMLC) $(BFLAGS) -custom -o $@ $(CMO) lowlevel_c.o
 
-$(NAME).opt: $(CMX) lvrouted.cmx lowlevel_c.c
+$(NAME).opt: $(CMX) lvrouted.cmx lowlevel_c.c lz4.o
 	$(CC) -O2 -Wall -I`$(OCAMLFIND) printconf stdlib` -g -c lowlevel_c.c
-	$(OCAMLOPT) $(OFLAGS) -o $@ $(CMX) lvrouted.cmx lowlevel_c.o
-$(NAME).prof: $(SOURCES) lowlevel_c.c
+	$(CC) -O2 -Wall -I`$(OCAMLFIND) printconf stdlib` -g -c lz4.c
+	$(OCAMLOPT) $(OFLAGS) -o $@ $(CMX) lvrouted.cmx lowlevel_c.o lz4.o
+$(NAME).prof: $(SOURCES) lowlevel_c.c lz4.o
 	$(CC) -O2 -p -Wall -I`$(OCAMLFIND) printconf stdlib` -g -c lowlevel_c.c
+	$(CC) -O2 -p -Wall -I`$(OCAMLFIND) printconf stdlib` -g -c lz4.c
 	$(OCAMLOPT) $(OFLAGS) -o $@ -p $(SOURCES) lowlevel_c.o
 
-test.opt: test.ml $(CMX) lowlevel_c.o
+test.opt: test.ml $(CMX) lowlevel_c.o lz4.o
 	$(OCAMLOPT) $(OFLAGS) -o $@ $(CMX) test.ml lowlevel_c.o
 
 Version.ml:
