okay, serializing works. also, dumping the resulting tree to a file in binary form and then LZ4ing it gives a 7% net size increase versus trunk. that's acceptable I guess. it was below twice the normal MTU before and with this it'll still be, which is good.

--- a/node-config/other/lvrouted/branches/wider/src/Makefile.in
+++ b/node-config/other/lvrouted/branches/wider/src/Makefile.in
@@ -72,7 +72,7 @@ $(NAME).prof: $(SOURCES) lowlevel_c.c lz4.o
 	$(OCAMLOPT) $(OFLAGS) -o $@ -p $(SOURCES) lowlevel_c.o
 
 test.opt: test.ml $(CMX) lowlevel_c.o lz4.o
-	$(OCAMLOPT) $(OFLAGS) -o $@ $(CMX) test.ml lowlevel_c.o
+	$(OCAMLOPT) $(OFLAGS) -o $@ $(CMX) test.ml lowlevel_c.o lz4.c
 
 Version.ml:
 	../tools/version.sh
